Add options for debugging issues

--- a/edu.caltech.library.persistent.url.resolver.plist
+++ b/edu.caltech.library.persistent.url.resolver.plist
@@ -14,5 +14,11 @@
     </array>
     <key>StartInterval</key>
     <integer>600</integer>
+    <key>StandardErrorPath</key>
+        <string>/Sites/persistent_url_resolver/logs/plist-error.log</string>
+        <key>StandardOutPath</key>
+        <string>/Sites/persistent_url_resolver/logs/plist-out.log</string>
+    <key>RunAtLoad</key>
+    <true/>
 </dict>
 </plist>
